Source/WebCore/html/BaseDateAndTimeInputType.cpp
@@ -40,9 +40,11 @@
 #include "DateTimeChooserParameters.h"
 #include "Decimal.h"
 #include "FocusController.h"
+#include "HTMLDataListElement.h"
 #include "HTMLDivElement.h"
 #include "HTMLInputElement.h"
 #include "HTMLNames.h"
+#include "HTMLOptionElement.h"
 #include "KeyboardEvent.h"
 #include "Page.h"
 #include "PlatformLocale.h"
@@ -292,7 +294,7 @@ void BaseDateAndTimeInputType::handleDOMActivateEvent(Event&)
         return;
 
     DateTimeChooserParameters parameters;
-    if (!element()->setupDateTimeChooserParameters(parameters))
+    if (!setupDateTimeChooserParameters(parameters))
         return;
 
     if (auto chrome = this->chrome()) {
@@ -460,7 +462,7 @@ void BaseDateAndTimeInputType::didChangeValueFromControl()
     InputType::setValue(value, value != element()->value(), DispatchInputAndChangeEvent);
 
     DateTimeChooserParameters parameters;
-    if (!element()->setupDateTimeChooserParameters(parameters))
+    if (!setupDateTimeChooserParameters(parameters))
         return;
 
     if (m_dateTimeChooser)
@@ -494,6 +496,68 @@ void BaseDateAndTimeInputType::didChooseValue(StringView value)
 void BaseDateAndTimeInputType::didEndChooser()
 {
     m_dateTimeChooser = nullptr;
+}
+
+bool BaseDateAndTimeInputType::setupDateTimeChooserParameters(DateTimeChooserParameters& parameters)
+{
+    ASSERT(element());
+
+    auto& element = *this->element();
+    auto& document = element.document();
+
+    if (!document.view())
+        return false;
+
+    parameters.type = element.type();
+    parameters.minimum = element.minimum();
+    parameters.maximum = element.maximum();
+    parameters.required = element.isRequired();
+
+    if (!document.settings().langAttributeAwareFormControlUIEnabled())
+        parameters.locale = defaultLanguage();
+    else {
+        AtomString computedLocale = element.computeInheritedLanguage();
+        parameters.locale = computedLocale.isEmpty() ? AtomString(defaultLanguage()) : computedLocale;
+    }
+
+    auto stepRange = createStepRange(AnyStepHandling::Reject);
+    if (stepRange.hasStep()) {
+        parameters.step = stepRange.step().toDouble();
+        parameters.stepBase = stepRange.stepBase().toDouble();
+    } else {
+        parameters.step = 1.0;
+        parameters.stepBase = 0;
+    }
+
+    if (RenderElement* renderer = element.renderer())
+        parameters.anchorRectInRootView = document.view()->contentsToRootView(renderer->absoluteBoundingBoxRect());
+    else
+        parameters.anchorRectInRootView = IntRect();
+    parameters.currentValue = element.value();
+
+    auto* computedStyle = element.computedStyle();
+    parameters.isAnchorElementRTL = computedStyle->direction() == TextDirection::RTL;
+    parameters.useDarkAppearance = document.useDarkAppearance(computedStyle);
+
+    auto date = parseToDateComponents(element.value()).valueOr(DateComponents());
+    parameters.hasSecondField = shouldHaveSecondField(date);
+    parameters.hasMillisecondField = shouldHaveMillisecondField(date);
+
+#if ENABLE(DATALIST_ELEMENT)
+    if (auto dataList = element.dataList()) {
+        for (auto& option : dataList->suggestions()) {
+            auto label = option.label();
+            auto value = option.value();
+            if (!element.isValidValue(value))
+                continue;
+            parameters.suggestionValues.append(element.sanitizeValue(value));
+            parameters.localizedSuggestionValues.append(element.localizeValue(value));
+            parameters.suggestionLabels.append(value == label ? String() : label);
+        }
+    }
+#endif
+
+    return true;
 }
 
 void BaseDateAndTimeInputType::closeDateTimeChooser()
